2024-09-02T01:08:58Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10659005883 # 406
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-02
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 951 1706 / 952 1707
* notice: next accum: outdated-unq outdated-all / unq all: 952 1707 / 953 1708
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-08-19] / [2024-09-01]

2024-08-20T01:04:17Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10463433021 # 393
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-20
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 950 1705 / 951 1706
* notice: next accum: outdated-unq outdated-all / unq all: 951 1706 / 952 1707
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-07-18] / [2024-08-19]

2024-07-19T01:23:35Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10000806502 # 361
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-19
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 949 1704 / 950 1705
* notice: next accum: outdated-unq outdated-all / unq all: 950 1705 / 951 1706
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-07-02] / [2024-07-18]

2024-07-10T01:03:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9866439602 # 352