@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-09-02T01:08:58Z",
+  "timestamp" : "2024-09-05T01:07:45Z",
   "count_outdated" : 1707,
   "uniques_outdated" : 952,
-  "count" : 1708,
-  "uniques" : 953,
+  "count" : 1709,
+  "uniques" : 954,
   "clones" : [
     {
       "timestamp": "2024-09-01T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-04T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
