@@ -1,3 +1,12 @@
+2024-09-05T01:07:45Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10712023226 # 409
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-05
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 952 1707 / 953 1708
+* notice: next accum: outdated-unq outdated-all / unq all: 952 1707 / 954 1709
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-04]
+
 2024-09-02T01:08:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/10659005883 # 406
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-02
